# ChangeLog for xfce-base/xfdesktop
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfdesktop/ChangeLog,v 1.93 2007/03/15 13:35:14 corsair Exp $

  15 Mar 2007; Markus Rothe <corsair@gentoo.org> xfdesktop-4.4.0-r3.ebuild:
  Stable on ppc64; bug #169987

  12 Mar 2007; Samuli Suominen <drac@gentoo.org> xfdesktop-4.4.0-r3.ebuild:
  Add warning about disabled desktop icons without USE dbus.

  12 Mar 2007; Bryan Østergaard <kloeri@gentoo.org>
  xfdesktop-4.4.0-r3.ebuild:
  Stable on Alpha + IA64.

  10 Mar 2007; nixnut <nixnut@gentoo.org> xfdesktop-4.4.0-r3.ebuild:
  Stable on ppc wrt bug 169987

  10 Mar 2007; Peter Weller <welp@gentoo.org> xfdesktop-4.4.0-r3.ebuild:
  Stable on amd64 wrt bug 169987

  09 Mar 2007; Jeroen Roovers <jer@gentoo.org> xfdesktop-4.4.0-r3.ebuild:
  Stable for HPPA (bug #169987).

  09 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  xfdesktop-4.4.0-r3.ebuild:
  stable x86; bug #169987

  08 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  xfdesktop-4.4.0-r3.ebuild:
  Stable on sparc wrt #169987

  02 Mar 2007; Peter Weller <welp@gentoo.org> xfdesktop-4.4.0-r3.ebuild:
  Keyworded on x86-fbsd

  26 Feb 2007; Samuli Suominen <drac@gentoo.org> xfdesktop-4.4.0-r3.ebuild:
  Adjust HOMEPAGE for bug 165707.

  15 Feb 2007; Joshua Nichols <nichoj@gentoo.org> xfdesktop-4.4.0-r3.ebuild:
  Added linguas to IUSE for controlling installation of localized
  configuration files.

*xfdesktop-4.4.0-r3 (09 Feb 2007)

  09 Feb 2007; Samuli Suominen <drac@gentoo.org> +xfdesktop-4.4.0-r3.ebuild:
  Change USE minimal options, remove USE plugins.

*xfdesktop-4.4.0-r2 (09 Feb 2007)

  09 Feb 2007; Samuli Suominen <drac@gentoo.org> +xfdesktop-4.4.0-r2.ebuild:
  Change USE thunar-vfs to USE dbus and minimal because users have been
  complaining.

*xfdesktop-4.4.0-r1 (04 Feb 2007)

  04 Feb 2007; Samuli Suominen <drac@gentoo.org> +xfdesktop-4.4.0-r1.ebuild: