@@ -1,0 +1,3 @@
+MD5 b47bbc7c73ff2ee68b65064f691efb6e xfdesktop-4.5_pre20070325.tar.bz2 5737890
+RMD160 02f4274d7fe279135571614e2174e599357ce1d0 xfdesktop-4.5_pre20070325.tar.bz2 5737890
+SHA256 552214bf9586ec6ca61345ab7fb0bfec86fcea3ca8b569dbaad1f5e451a7a31f xfdesktop-4.5_pre20070325.tar.bz2 5737890
