@@ -1,6 +1,12 @@
 # ChangeLog for xfce-base/xfdesktop
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfdesktop/ChangeLog,v 1.93 2007/03/15 13:35:14 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfdesktop/ChangeLog,v 1.94 2007/03/25 15:18:47 drac Exp $
+
+*xfdesktop-4.5_pre20070325 (25 Mar 2007)
+
+  25 Mar 2007; Samuli Suominen <drac@gentoo.org>
+  +xfdesktop-4.5_pre20070325.ebuild:
+  Version bump to masked testing snapshot.
 
   15 Mar 2007; Markus Rothe <corsair@gentoo.org> xfdesktop-4.4.0-r3.ebuild:
   Stable on ppc64; bug #169987
